agregar mas al html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Titulo HTML</title>
   </head>
   <body>
-    <h1>Titulo</h1>
+    <h1>Mi Nuevo Super Titulo</h1>
+    <hr>
   </body>
 </html>
